current_build_test.log
🔧 CURSED Linking Fix - Setting up Nix environment for compilation...
📚 Library Path: /nix/store/6pak77li0iw9x0b3yhmbjvp846w3p6bx-libffi-3.4.6/lib:/nix/store/l5g2v1jgfyf3j0jp9iv5b79fi8yrwzpp-zlib-1.3.1/lib:/nix/store/k3a7dzrqphj9ksbb43i24vy6inz8ys51-ncurses-6.4.20221231/lib:/nix/store/hd6llsw2dkiazk9d2ywv13cc6alhflly-libxml2-2.13.5/lib:/nix/store/dsqzw96w4sxsp4q9yvkfl2yh701mpwgi-sqlite-3.46.1/lib
🛠️  Rust Flags: -C linker=gcc -C link-arg=-fuse-ld=bfd
🚀 Executing: cargo build

    Updating crates.io index
     Locking 14 packages to latest compatible versions
      Adding block-padding v0.3.3
      Adding cbc v0.1.2
      Adding cipher v0.4.4
      Adding httpdate v1.0.3
      Adding inout v0.1.4
      Adding jobserver v0.1.33
      Adding libloading v0.8.8
      Adding pkg-config v0.3.32
      Adding serde_yaml v0.9.34+deprecated
      Adding unsafe-libyaml v0.2.11
      Adding urlencoding v2.1.3
      Adding zstd v0.13.3
      Adding zstd-safe v7.2.4
      Adding zstd-sys v2.0.15+zstd.1.5.7
   Compiling subtle v2.6.1
   Compiling regex-automata v0.4.9
   Compiling block-padding v0.3.3
   Compiling llvm-sys v170.2.0
   Compiling rand_chacha v0.3.1
   Compiling tokio v1.45.1
   Compiling serde_yaml v0.9.34+deprecated
   Compiling inout v0.1.4
   Compiling digest v0.10.7
   Compiling cipher v0.4.4
   Compiling rand v0.8.5
   Compiling sha2 v0.10.9
   Compiling hmac v0.12.1
   Compiling sha3 v0.10.8
   Compiling cbc v0.1.2
   Compiling inkwell v0.4.0
   Compiling regex v1.11.1
   Compiling tracing-subscriber v0.3.19
   Compiling env_logger v0.10.2
   Compiling cursed v0.1.0 (/home/ghuntley/code/cursed)
error[E0463]: can't find crate for `dirs`
   --> src/stdlib/system/platform.rs:846:1
    |
846 | extern crate dirs;
    | ^^^^^^^^^^^^^^^^^^ can't find crate

error[E0252]: the name `Ed25519PublicKey` is defined multiple times
  --> src/stdlib/crypto/mod.rs:49:5
   |
2  | use crate::stdlib::crypto::asymmetric::Ed25519PublicKey;
   |     --------------------------------------------------- previous import of the type `Ed25519PublicKey` here
...
49 |     Ed25519PublicKey, Ed25519PrivateKey, Ed25519Keypair, Ed25519Signature,
   |     ^^^^^^^^^^^^^^^^ `Ed25519PublicKey` reimported here
   |
   = note: `Ed25519PublicKey` must be defined only once in the type namespace of this module
help: you can use `as` to change the binding name of the import
   |
49 |     Ed25519PublicKey as OtherEd25519PublicKey, Ed25519PrivateKey, Ed25519Keypair, Ed25519Signature,
   |                      ++++++++++++++++++++++++

error[E0252]: the name `SecurityContext` is defined multiple times
  --> src/stdlib/crypto/mod.rs:73:23
   |
1  | use crate::stdlib::web_vibez::SecurityContext;
   |     ----------------------------------------- previous import of the type `SecurityContext` here
...
73 |     CryptoParameters, SecurityContext,
   |                       ^^^^^^^^^^^^^^^ `SecurityContext` reimported here
   |
   = note: `SecurityContext` must be defined only once in the type namespace of this module
help: you can use `as` to change the binding name of the import
   |
73 |     CryptoParameters, SecurityContext as OtherSecurityContext,
   |                                       +++++++++++++++++++++++

error[E0432]: unresolved import `crate::runtime::debug_info`
 --> src/error/debug_context.rs:8:21
  |
8 | use crate::runtime::debug_info::{EnhancedStackTrace, EnhancedStackFrame, DebugInfo};
  |                     ^^^^^^^^^^ could not find `debug_info` in `runtime`

error[E0432]: unresolved import `crate::runtime::debug_manager`
 --> src/error/debug_context.rs:9:21
  |
9 | use crate::runtime::debug_manager::DebugManager;
  |                     ^^^^^^^^^^^^^ could not find `debug_manager` in `runtime`

error[E0433]: failed to resolve: unresolved import
  --> src/parser/result_types.rs:10:12
   |
10 | use crate::types::result::{ResultTypeExpression, OptionTypeExpression};
   |            ^^^^^
   |            |
   |            unresolved import
   |            help: a similar path exists: `inkwell::types`

error[E0433]: failed to resolve: unresolved import
 --> src/codegen/llvm/main.rs:7:12
  |
7 | use crate::optimization::real_llvm_passes::RealLlvmPassManager;
  |            ^^^^^^^^^^^^
  |            |
  |            unresolved import
